--- a/style.css
+++ b/style.css
@@ -1,8 +1,19 @@
+:root {
+  --background: #2f2f33;
+  --background-dark: #1c1c1f;
+  --main-text: #ececec;
+}
+
 * {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  color: var(--main-text);
+}
+
+body {
+  background: var(--background-dark);
 }
 
 .title {
@@ -10,7 +21,7 @@
 }
 
 header {
-  background-color: lightblue;
+  background-color: var(--background);
   width: 100%;
   height: 70px;
   display: flex;
@@ -31,7 +42,7 @@ nav {
   bottom: 0;
   right: 0;
   left: 0;
-  background-color: lightblue;
+  background-color: var(--background);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -43,13 +54,19 @@ nav {
   clip-path: circle(150% at 100% 0%);
 }
 
-.close-icon {
+.close-icon-wrapper {
   position: absolute;
   top: 0;
   right: 0;
+  height: 70px;
+  display: flex;
+  align-items: center;
+  padding: 20px;
+}
+
+.close-icon {
   transform: scale(2);
   cursor: pointer;
-  margin: 20px;
 }
 
 .nav-list {
@@ -62,7 +79,6 @@ nav {
 }
 
 .nav-item a {
-  color: black;
   text-decoration: none;
   font-size: 20px;
   font-weight: 500;
