--- a/style.css
+++ b/style.css
@@ -14,10 +14,7 @@
 
 body {
   background: var(--background-dark);
-}
-
-.title {
-  width: 50%;
+  /* background: white; */
 }
 
 header {
@@ -28,6 +25,10 @@ header {
   align-items: center;
   justify-content: space-between;
   padding: 20px;
+}
+
+.title {
+  width: 50%;
 }
 
 .hamburger-icon {
@@ -85,7 +86,11 @@ nav {
   cursor: pointer;
 }
 
-@media screen and (min-width: 530px) {
+section {
+  font-size: 50px;
+}
+
+@media screen and (min-width: 770px) {
   .hamburger-icon {
     display: none;
   }
@@ -105,6 +110,20 @@ nav {
     display: flex;
     flex-direction: row;
     width: 100%;
-    justify-content: space-between;
+    justify-content: space-around;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  header {
+    height: 100px;
+  }
+
+  .title {
+    font-size: 30px;
+  }
+
+  .nav-item a {
+    font-size: 23px;
   }
 }
