--- a/style.css
+++ b/style.css
@@ -1,112 +1,30 @@
-:root {
-  --background: #2f2f33;
-  --background-dark: #1c1c1f;
-  --background-dark-2: #121214;
-  --main-text: #ececec;
-}
-
-* {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  color: var(--main-text);
-}
-
-body {
-  background: var(--background-dark);
-  /* background: white; */
-}
-
-header {
-  background-color: var(--background);
-  width: 100%;
-  height: 70px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 20px;
-}
-
-.title {
-  width: 50%;
-}
-
-.hamburger-icon {
-  transform: scale(2);
-  cursor: pointer;
-}
-
-nav {
-  z-index: 1000;
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 100vh;
-  width: 100%;
-  background-color: var(--background);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  clip-path: circle(0% at 100% 0%);
-  transition: clip-path 0.5s ease-out;
-}
-
-.nav-shown {
-  clip-path: circle(150% at 100% 0%);
-}
-
-.close-icon-wrapper {
-  position: absolute;
-  top: 0;
-  right: 0;
-  height: 70px;
-  display: flex;
-  align-items: center;
-  padding: 20px;
-}
-
-.close-icon {
-  transform: scale(2);
-  cursor: pointer;
-}
-
-.nav-list {
-  list-style: none;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  max-height: 600px;
-  height: 60%;
-}
-
-.nav-item a {
-  text-decoration: none;
-  font-size: 20px;
-  font-weight: 500;
-  cursor: pointer;
-}
-
 .landing {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
-  height: 100%;
+}
+
+.top {
+  background: var(--background-dark);
+  width: 100%;
+  padding: 3rem;
+  min-height: 150px;
 }
 
 .landing-header {
   font-size: 3rem;
-  margin-top: 6rem;
+  /* margin-top: 6rem; */
+  width: 100%;
+  text-align: center;
 }
 
 .bottom {
   width: 100%;
-  background: var(--background-dark-2);
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100%;
+  justify-content: space-evenly;
 }
 
 .content {
@@ -116,13 +34,26 @@ nav {
 }
 
 .waves {
-  fill: var(--background-dark-2);
+  fill: var(--background-dark);
   width: 100%;
+  height: auto;
 }
 
 .greeting {
   margin-top: 1rem;
   font-size: 1.2rem;
+}
+
+.projects-call-to-action {
+  background-color: var(--call-to-action);
+  border: none;
+  outline: none;
+  font-size: 2rem;
+  padding: 0.75rem;
+  border-radius: 1rem;
+  text-align: center;
+  font-weight: 500;
+  cursor: pointer;
 }
 
 @media screen and (min-width: 770px) {
@@ -132,7 +63,8 @@ nav {
 
   nav {
     clip-path: none;
-    position: relative;
+    position: static;
+    height: 100%;
     background: none;
     width: 50%;
   }
