--- a/style.css
+++ b/style.css
@@ -3,12 +3,13 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
+  height: 100%;
 }
 
 .top {
   background: var(--background-dark);
   width: 100%;
-  padding: 3rem;
+  padding-top: 5rem;
   min-height: 150px;
 }
 
@@ -31,12 +32,14 @@
   padding-top: 2rem;
   max-width: 60%;
   text-align: center;
+  min-height: 200px;
 }
 
 .waves {
   fill: var(--background-dark);
   width: 100%;
   height: auto;
+  margin-top: -2rem;
 }
 
 .greeting {
@@ -54,4 +57,13 @@
   text-align: center;
   font-weight: 500;
   cursor: pointer;
+}
+
+.bottom-flex-wrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  padding-bottom: 2rem;
 }
