--- a/projects/pages/discordBot/main.css
+++ b/projects/pages/discordBot/main.css
@@ -4,6 +4,9 @@
   padding: 0;
   margin: 0;
   color: #fff;
+
+  --background-main: #101010;
+  --background-second: #1d1d1d;
 }
 
 * {
@@ -12,8 +15,21 @@
 }
 
 body {
-  background-color: #101010;
+  background-color: var(--background-main);
   margin: 0;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: var(--background-main);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--background-second);
+  border-radius: 5px;
 }
 
 a {
@@ -24,24 +40,48 @@ header {
   display: flex;
   flex-direction: row;
   height: 100px;
+  width: 100%;
+  background: var(--background-main);
   /* background-color: grey; */
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
-  padding: 1rem;
+  padding: 1rem 3rem;
+  position: sticky;
+  top: 0;
+  transition: box-shadow 0.7s ease-out;
 }
 
-header img[alt='logo'] {
+.header-shadow {
+  box-shadow: 0px 0px 31px 5px rgba(0, 0, 0, 0.69);
+}
+
+.solid-logo img {
   width: 100px;
   height: 100px;
-  margin-left: auto;
 }
 
 .maincontent {
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 2rem;
+  margin: 2rem;
 }
 
 .maincontent > * {
-  max-width: 60%;
+  width: 60%;
+}
+
+.commands img[alt='help embed'] {
+  width: 100%;
+  border-radius: 5px;
+}
+
+footer {
+  background: var(--background-second);
+  padding: 0rem 1rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
 }
