change scroll snap type to mandatory

--- a/projects/pages/portfolioPage/styles/styles.css
+++ b/projects/pages/portfolioPage/styles/styles.css
@@ -146,8 +146,8 @@
 
 .container {
   height: 100vh;
-  -ms-scroll-snap-type: y proximity;
-      scroll-snap-type: y proximity;
+  -ms-scroll-snap-type: y mandatory;
+      scroll-snap-type: y mandatory;
   overflow-y: scroll;
 }
 
