--- a/projects/pages/portfolioPage/styles/styles.scss
+++ b/projects/pages/portfolioPage/styles/styles.scss
@@ -67,6 +67,10 @@ $nav-background-color: rgb(13, 16, 19);
     a {
       text-decoration: underline;
     }
+
+    .back-to-top {
+      cursor: pointer;
+    }
   }
 }
 
