--- a/projects/pages/portfolioPage/styles/styles.scss
+++ b/projects/pages/portfolioPage/styles/styles.scss
@@ -39,6 +39,7 @@ $nav-background-color: rgb(13, 16, 19);
     align-items: center;
     flex-direction: column;
     gap: 2rem;
+    position: relative;
 
     .header {
       text-transform: capitalize;
@@ -51,7 +52,7 @@ $nav-background-color: rgb(13, 16, 19);
       box-shadow: 0px 4px 25px 4px #000000;
       cursor: pointer;
 
-      transition: all 0.2s ease-out;
+      transition: max-height 0.2s ease-out;
     }
   }
 
