--- a/projects/pages/portfolioPage/styles/_hamburgermenu.scss
+++ b/projects/pages/portfolioPage/styles/_hamburgermenu.scss
@@ -1,9 +1,11 @@
 .header-sect {
   position: absolute;
   right: 2rem;
+  z-index: 1000;
 
   .open {
     font-size: 3rem;
+    cursor: pointer;
   }
 
   .ham-menu {
@@ -26,6 +28,7 @@
       position: absolute;
       right: 2rem;
       top: 0;
+      cursor: pointer;
     }
 
     ul {
