--- a/projects/pages/portfolioPage/styles/_hamburgermenu.scss
+++ b/projects/pages/portfolioPage/styles/_hamburgermenu.scss
@@ -11,8 +11,7 @@
   .ham-menu {
     z-index: 1000;
     position: fixed;
-    top: 0;
-    left: 0;
+    inset: 0;
     height: 100vh;
     width: 100%;
     background-color: $nav-background-color;
