--- a/projects/pages/portfolioPage/styles/styles.css
+++ b/projects/pages/portfolioPage/styles/styles.css
@@ -63,8 +63,7 @@
 .header-sect .ham-menu {
   z-index: 1000;
   position: fixed;
-  top: 0;
-  left: 0;
+  inset: 0;
   height: 100vh;
   width: 100%;
   background-color: #0d1013;
