fixed misalignment with text-indent

--- a/projects/pages/portfolioPage/styles/styles.css
+++ b/projects/pages/portfolioPage/styles/styles.css
@@ -249,7 +249,8 @@
 }
 
 .page1 .name-plate .job-title {
-  letter-spacing: 0.37rem;
+  letter-spacing: 0.4rem;
+  text-indent: 0.4rem;
 }
 
 .hidden {
