setup beginning of changes to about me

--- a/projects/pages/portfolioPage/styles/styles.scss
+++ b/projects/pages/portfolioPage/styles/styles.scss
@@ -10,6 +10,8 @@ $nav-background-color: rgb(13, 16, 19);
 @import './enlargeimage';
 @import './hamburgermenu';
 
+@import './about';
+
 :root {
   font-family: 'Open Sans', sans-serif;
   color: $text-color;
