--- a/projects/pages/portfolioPage/about/styles/styles.scss
+++ b/projects/pages/portfolioPage/about/styles/styles.scss
@@ -47,5 +47,10 @@ html {
 
   @media screen and (max-width: 1350px) {
     flex-direction: column;
+    gap: 2rem;
+  }
+
+  @media screen and (max-width: 1130px) {
+    width: 65%;
   }
 }
