fixed font not working

--- a/universalStyles/style.scss
+++ b/universalStyles/style.scss
@@ -1,5 +1,20 @@
 @import url(//db.onlinewebfonts.com/c/721c73bcd2e49f3a621991089838b503?family=Euclid+Circular+B+Medium);
 
+@font-face {
+  font-family: 'Euclid Circular B Medium';
+  src: url('//db.onlinewebfonts.com/t/721c73bcd2e49f3a621991089838b503.eot');
+  src: url('//db.onlinewebfonts.com/t/721c73bcd2e49f3a621991089838b503.eot?#iefix')
+      format('embedded-opentype'),
+    url('//db.onlinewebfonts.com/t/721c73bcd2e49f3a621991089838b503.woff2')
+      format('woff2'),
+    url('//db.onlinewebfonts.com/t/721c73bcd2e49f3a621991089838b503.woff')
+      format('woff'),
+    url('//db.onlinewebfonts.com/t/721c73bcd2e49f3a621991089838b503.ttf')
+      format('truetype'),
+    url('//db.onlinewebfonts.com/t/721c73bcd2e49f3a621991089838b503.svg#Euclid Circular B Medium')
+      format('svg');
+}
+
 @import './variables';
 
 * {
