added extra responsiveness + moved universal styles to dedicated file

--- a/projects/styles/style.css
+++ b/projects/styles/style.css
@@ -31,7 +31,12 @@ main section {
   gap: 1rem;
 }
 
-main section h3 {
-  font-size: 1.5rem;
+main section a {
+  font-size: 1.3rem;
+  text-decoration: none;
+}
+
+main section a:hover {
+  text-decoration: underline;
 }
 /*# sourceMappingURL=style.css.map */
