--- a/universalStyles/style.css
+++ b/universalStyles/style.css
@@ -116,4 +116,30 @@ header nav ul li:hover::after {
   -webkit-transform: scaleX(1);
           transform: scaleX(1);
 }
+
+h3 {
+  font-size: 2rem;
+}
+
+p {
+  font-size: 1.6rem;
+}
+
+@media screen and (max-width: 950px) {
+  h3 {
+    font-size: 1.8rem;
+  }
+  p {
+    font-size: 1.4rem;
+  }
+}
+
+@media screen and (max-width: 510px) {
+  h3 {
+    font-size: 1.6rem;
+  }
+  p {
+    font-size: 1.2rem;
+  }
+}
 /*# sourceMappingURL=style.css.map */
