--- a/universalStyles/style.css
+++ b/universalStyles/style.css
@@ -1,4 +1,4 @@
-@import url(//db.onlinewebfonts.com/c/721c73bcd2e49f3a621991089838b503?family=Euclid+Circular+B+Medium);
+@import url(https://db.onlinewebfonts.com/c/721c73bcd2e49f3a621991089838b503?family=Euclid+Circular+B+Medium);
 @font-face {
   font-family: 'Euclid Circular B Medium';
   src: url("//db.onlinewebfonts.com/t/721c73bcd2e49f3a621991089838b503.eot");
