QOL changes to search enging

--- a/projects/pages/searchEngine/style.css
+++ b/projects/pages/searchEngine/style.css
@@ -54,7 +54,8 @@
 .dropdown {
   position: absolute;
   top: 0;
-  left: 0;
+  left: 50%;
+  transform: translateX(-50%);
   overflow: hidden;
   width: max-content;
 }
