--- a/projects/pages/portfolioPage/styles/styles.css
+++ b/projects/pages/portfolioPage/styles/styles.css
@@ -52,12 +52,36 @@
 .header-sect {
   position: absolute;
   right: 2rem;
+  top: 2rem;
   z-index: 1000;
 }
 
 .header-sect .open {
-  font-size: 3rem;
+  background-color: #e9e9e9;
+  width: 2.5rem;
+  height: 5px;
   cursor: pointer;
+  position: relative;
+}
+
+.header-sect .open::before {
+  content: '';
+  position: absolute;
+  top: 10px;
+  width: 100%;
+  margin-bottom: 5px;
+  height: 5px;
+  background-color: #e9e9e9;
+}
+
+.header-sect .open::after {
+  content: '';
+  position: absolute;
+  top: 20px;
+  width: 100%;
+  margin-bottom: 5px;
+  height: 5px;
+  background-color: #e9e9e9;
 }
 
 .header-sect .ham-menu {
@@ -85,11 +109,25 @@
 }
 
 .header-sect .ham-menu .close {
-  font-size: 3rem;
   position: absolute;
   right: 2rem;
-  top: 0;
+  top: 2.7rem;
+  background-color: #e9e9e9;
+  width: 2.5rem;
+  height: 5px;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
   cursor: pointer;
+}
+
+.header-sect .ham-menu .close::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 5px;
+  background-color: #e9e9e9;
+  -webkit-transform: rotate(-90deg);
+          transform: rotate(-90deg);
 }
 
 .header-sect .ham-menu ul {
