--- a/styles/main.css
+++ b/styles/main.css
@@ -40,18 +40,55 @@ header {
   box-shadow: var(--seperate-shadow);
 }
 
-.color-bar {
-  background: var(--primary);
-  height: 2vh;
-  width: 100%;
-}
-
 nav {
   position: fixed;
   top: 0;
   right: 0;
   left: 0;
   transition: 500ms ease-out;
+}
+
+.hide-nav {
+  transform: translateX(0px);
+}
+
+.hamburger-icon {
+  display: none;
+}
+
+@media only screen and (max-width: 600px) {
+  .hamburger-icon {
+    position: absolute;
+    display: block;
+    top: 0.5rem;
+    right: 0.5rem;
+    z-index: 1000;
+  }
+
+  nav {
+    position: absolute;
+    inset: 0;
+    background: rgba(0, 0, 0, 0.4);
+  }
+
+  .nav-content {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+  }
+
+  .hide-nav {
+    transform: translateX(100%);
+  }
+
+  .nav-list {
+    display: flex;
+    flex-direction: column !important;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 100%;
+  }
 }
 
 nav a {
@@ -77,7 +114,7 @@ nav a {
   font-weight: normal;
 }
 
-.nav-content ul {
+.nav-list {
   list-style: none;
   gap: 2rem;
   display: flex;
@@ -106,6 +143,20 @@ nav a {
 .hero-location {
   display: flex;
   gap: 5px;
+}
+
+@media only screen and (max-width: 700px) {
+  .hero h1 {
+    font-size: 1.2rem;
+  }
+
+  .hero-location h2 {
+    font-size: 1rem;
+  }
+
+  .hero-location svg {
+    width: 1rem;
+  }
 }
 
 /* PROJECTS */
