--- a/styles/main.css
+++ b/styles/main.css
@@ -379,7 +379,10 @@ nav a {
 }
 
 @media only screen and (max-width: 460px) {
-  .hero {
+  .hero > span {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
   }
 }
