--- a/photography/stylesindex/styles.scss
+++ b/photography/stylesindex/styles.scss
@@ -1,6 +1,6 @@
 .container {
   height: 100vh;
-  scroll-snap-type: y mandatory;
+  scroll-snap-type: y;
   overflow-y: scroll;
 
   // General styles for pages
@@ -17,7 +17,7 @@
     .image {
       max-height: 60vh;
       max-width: 80%;
-      border: 20px solid white;
+      border: calc(min(20px, 2vw)) solid white;
       box-shadow: 0px 4px 25px 4px #000000;
       cursor: pointer;
 
@@ -45,7 +45,7 @@
 
 .scroll-down {
   position: absolute;
-  bottom: 3rem;
+  bottom: -10px;
   width: 5rem;
   opacity: 0.2;
   left: calc(50% - 2.5rem);
