--- a/styles/main.css
+++ b/styles/main.css
@@ -57,7 +57,11 @@ nav {
   top: 1rem;
   right: 1rem;
   display: none;
-  background: radial-gradient(circle at center, rgba(0,0,0,0.3) 0%, rgba(0,0,0,0) 70%);
+  background: radial-gradient(
+    circle at center,
+    rgba(0, 0, 0, 0.3) 0%,
+    rgba(0, 0, 0, 0) 70%
+  );
   padding: 0.2rem;
   border-radius: 50%;
 }
@@ -136,7 +140,7 @@ nav a {
 }
 
 .project-card:first-of-type::before {
-  content: 'SPOTLIGHT';
+  content: "SPOTLIGHT";
 }
 
 .project-card {
@@ -397,4 +401,80 @@ nav a {
     align-items: center;
     text-align: center;
   }
+}
+
+.dev-page-login {
+  z-index: 1001;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: none;
+}
+
+.dev-page-form {
+  position: absolute;
+  width: 40vw;
+  left: calc(50% - 20vw);
+  top: calc(50% - 25vh);
+  display: flex;
+  flex-direction: column;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.8);
+  padding: 1rem;
+  border-radius: 2rem;
+}
+
+#dev-page-title {
+  font-size: 2rem;
+  margin-bottom: 1rem;
+}
+
+#dev-page-password {
+  width: 50%;
+  margin-top: 0.5rem;
+  margin-bottom: 2rem;
+  padding: 0.8rem;
+  border: 1px solid var(--dark);
+  border-radius: 0.25rem;
+}
+
+#dev-page-submit,
+#dev-page-cancel {
+  background: var(--primary);
+  color: var(--light);
+  padding: 0.8rem 1.2rem;
+  border: none;
+  border-radius: 0.25rem;
+  cursor: pointer;
+  width: 6rem;
+  transition: background 300ms ease-out;
+  margin-top: 1rem;
+  font-size: 1.05rem;
+}
+
+#dev-page-submit:hover {
+  background: hsl(263, 90%, 60%);
+}
+
+#dev-page-cancel {
+  margin-left: 1rem;
+  background: var(--dark);
+}
+
+#dev-page-cancel:hover {
+  background: #3a134e;
+}
+
+footer {
+  position: relative;
+}
+
+#dev-page-button {
+  position: absolute;
+  right: 0.5rem;
+  bottom: 0.5rem;
+  cursor: pointer;
 }
