--- a/photography/stylesindex/styles.css
+++ b/photography/stylesindex/styles.css
@@ -1,60 +1,37 @@
 .container {
   height: 100vh;
-  -ms-scroll-snap-type: y;
-      scroll-snap-type: y;
+  scroll-snap-type: y;
   overflow-y: scroll;
 }
-
 .container section {
   height: 100vh;
   scroll-snap-align: start;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   gap: 2rem;
   position: relative;
 }
-
 .container section .image {
   max-height: 60vh;
   max-width: 80%;
-  border: calc(min(20px, 2vw)) solid white;
-  -webkit-box-shadow: 0px 4px 25px 4px #000000;
-          box-shadow: 0px 4px 25px 4px #000000;
+  border: min(20px, 2vw) solid white;
+  box-shadow: 0px 4px 25px 4px #000000;
   cursor: pointer;
-  -webkit-transition: max-height 0.2s ease-out;
   transition: max-height 0.2s ease-out;
 }
-
 .container footer {
   scroll-snap-align: start;
   height: 80px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  align-items: center;
+  justify-content: space-between;
   padding: 0rem 1rem;
 }
-
 .container footer a {
   text-decoration: underline;
 }
-
 .container footer .back-to-top {
   cursor: pointer;
 }
@@ -68,34 +45,20 @@
 }
 
 .page1 {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
   gap: 0;
 }
-
 .page1 .name-plate {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  align-items: center;
+  flex-direction: column;
   text-align: center;
 }
-
 .page1 .name-plate .title {
   font-size: 40px;
   font-weight: 500;
 }
-
 .page1 .name-plate .job-title {
   letter-spacing: 0.4rem;
   text-indent: 0.4rem;
@@ -103,5 +66,4 @@
 
 .hidden {
   display: none;
-}
-/*# sourceMappingURL=styles.css.map */
+}/*# sourceMappingURL=styles.css.map */
