--- a/photography/styles/styles.scss
+++ b/photography/styles/styles.scss
@@ -1,20 +1,21 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap");
 
 $text-color: rgb(233, 233, 233);
 // $background-color: rgb(15, 15, 15);
 $background-color: rgb(20, 25, 29);
 $nav-background-color: rgb(13, 16, 19);
 
-@import './scrollbar';
-@import './animatedunderline';
-@import './enlargeimage';
-@import './hamburgermenu';
+@import "./scrollbar";
+@import "./animatedunderline";
+@import "./enlargeimage";
+@import "./hamburgermenu";
 
 :root {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   color: $text-color;
   background: $background-color;
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 * {
