--- a/projects/minecraft-items-list/src/styles/main.css
+++ b/projects/minecraft-items-list/src/styles/main.css
@@ -1,26 +1,47 @@
-html {
+:root {
+  --clr-light: #fffdfa;
+  --clr-dark: #222831;
+  --clr-accent-dark: hsl(0, 0%, 85%);
+  --clr-accent-light: hsl(216, 18%, 50%);
   --green: #28a745;
   --red: rgb(210, 51, 51);
+
+  --foreground: var(--clr-dark);
+  --background: var(--clr-light);
+}
+
+.darkmode {
+  --background: var(--clr-dark);
+  --foreground: var(--clr-light);
+
+  --clr-accent-light: hsl(0, 0%, 85%);
+  --clr-accent-dark: hsl(216, 18%, 50%);
 }
 
 body {
-  font-family: Arial, sans-serif;
-  background-color: #f0f0f0;
+  font-family: "Segoe UI", Arial, sans-serif;
+  background-color: var(--background);
+  color: var(--foreground);
   margin: 0;
   padding: 20px;
 }
 
-h1 {
-  color: #333;
+.header-bar {
+  position: relative;
 }
 
-.container {
-  max-width: 800px;
-  margin: 0 auto;
-  background: white;
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+.dark-mode-toggle {
+  position: absolute;
+  z-index: 100;
+  top: 1em;
+  right: 1em;
+  background: transparent;
+  border: 2px solid var(--foreground);
+  padding: 4px;
+  cursor: pointer;
+  border-radius: 5px;
+  width: 30px;
+  height: 30px;
 }
 
 form {
@@ -32,14 +53,20 @@ form {
 .input {
   padding: 10px;
   margin: 5px 0;
-  border: 1px solid #ccc;
+  background-color: var(--clr-accent-dark);
+  border: 1px solid var(--clr-accent-light);
   border-radius: 0.25rem;
+  color: var(--clr-accent-light);
+
+  &::placeholder {
+    color: var(--clr-accent-light);
+  }
 }
 
 .button {
   padding: 10px;
   background-color: var(--green);
-  color: white;
+  color: var(--foreground);
   border: none;
   border-radius: 0.25rem;
   cursor: pointer;
@@ -54,6 +81,10 @@ form {
 .item-list-container {
   padding: 0;
 
+  h2 {
+    font-weight: 600;
+  }
+
   .clear-list-button {
     background-color: var(--red);
     display: block;
@@ -66,6 +97,11 @@ form {
 
 .item-list:nth-last-child(3) {
   border-bottom: 1px solid #ccc;
+}
+
+.collected {
+  opacity: 0.5;
+  text-decoration: line-through;
 }
 
 .item-list li {
@@ -93,15 +129,10 @@ form {
   }
 
   &:hover {
-    color: rgba(0, 0, 0, 0.6);
+    opacity: 0.6;
     text-decoration: line-through;
     cursor: pointer;
   }
-}
-
-.collected {
-  color: rgba(0, 0, 0, 0.6);
-  text-decoration: line-through;
 }
 
 .collected-progress-bar {
@@ -112,7 +143,7 @@ form {
   width: 100%;
 
   &::-webkit-progress-bar {
-    background-color: #eee;
+    background-color: var(--clr-accent);
     border-radius: 0.25rem;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2) inset;
   }
